Optimisation du code v2.0

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                     </ul>
                 </nav>
                 <!-- End navigation -->
+                <a href="" class="hamburger" id="hamburger"><i class="fas fa-bars"></i></a>
+                <!--Responsive menu icon-->
             </div>
         </div>
     </header>
@@ -185,6 +187,74 @@
 
     </section>
     <!--End Mentors section  -->
+    <!-- Articles section  -->
+    <section class="services py-70" id="services">
+        <div class="container">
+            <div class="services-wrapper">
+                <header class="section-header">
+                    <!-- Services header (h1+description)-->
+                    <h1 class="main-title">Nos Services</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt nostrum beatae excepturi qui,
+                        velit, quae et veritatis asperiores sunt placeat ducimus dolor pariatur, ea dolorem facilis enim
+                        necessitatibus corrupti. Molestias.</p>
+                </header><!-- End Services header -->
+                <div class="service-container row">
+                    <!-- Services container -->
+                    <article class="px-15">
+                        <!-- Services one -->
+                        <div class="service-img"><img src="assets/imgs/service/Vols/airfrance1.jpg" alt="avion"
+                                class="img"></div>
+                        <header>
+                            <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate ull</h4>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus molestias ipsam illum
+                            neque at debitis repellat dolorem, dolores saepe expedita maiores mollitia totam suscipit
+                            deserunt repudiandae ratione beatae sit assumenda!</p>
+                        <footer><a href="#" class="btn btn-big">Allez à la page</a> </footer>
+                    </article>
+                    <article class="px-15">
+                        <!-- Services two -->
+                        <div class="service-img"><img src="assets/imgs/service/Vols/airfrance1.jpg" alt="avion"
+                                class="img"></div>
+                        <header>
+                            <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate ull</h4>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus molestias ipsam illum
+                            neque at debitis repellat dolorem, dolores saepe expedita maiores mollitia totam suscipit
+                            deserunt repudiandae ratione beatae sit assumenda!</p>
+                        <footer><a href="#" class="btn btn-big">Allez à la page</a> </footer>
+                    </article>
+                    <article class="px-15">
+                        <!-- Services Three -->
+                        <div class="service-img"><img src="assets/imgs/service/Tourismes/Chute d'eau.jpg" alt="avion"
+                                class="img"></div>
+                        <header>
+                            <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate ull</h4>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus molestias ipsam illum
+                            neque at debitis repellat dolorem, dolores saepe expedita maiores mollitia totam suscipit
+                            deserunt repudiandae ratione beatae sit assumenda!</p>
+                        <footer><a href="#" class="btn btn-big">Allez à la page</a> </footer>
+                    </article>
+                    <article class="px-15">
+                        <!-- Services four -->
+                        <div class="service-img"><img src="assets/imgs/service/Evenements/photo1.jpg" alt="avion"
+                                class="img"></div>
+                        <header>
+                            <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate ull</h4>
+                        </header>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus molestias ipsam illum
+                            neque at debitis repellat dolorem, dolores saepe expedita maiores mollitia totam suscipit
+                            deserunt repudiandae ratione beatae sit assumenda!</p>
+                        <footer><a href="#" class="btn btn-big">Allez à la page</a> </footer>
+                    </article>
+
+                </div>
+            </div>
+
+
+    </section>
+    <!--End Articles section  -->
     <!-- Footer section  -->
     <footer class="footer py-70 bg-bw" id="footer">
         <div class="container">
@@ -227,6 +297,9 @@
         </div>
     </footer>
     <!-- End footer -->
+    <!-- JavaScript loading -->
+    <script type="text/JavaScript" src="assets/js/script.js"></script>
+
 </body>
 
 </html>
