Gestion de la rresponsivite pour la bannière et le Card

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </ul>
                 </nav>
                 <!-- End navigation -->
-                <a href="" class="hamburger" id="hamburger"><i class="fas fa-bars"></i></a>
+                <a href="#" class="hamburger" id="hamburger"><i class="fas fa-bars"></i></a>
                 <!--Responsive menu icon-->
             </div>
         </div>
@@ -290,7 +290,9 @@
 
                 <div class="copyright" id="copyright">
                     &copy; | SMART-IT
-                    <script>document.write(new Data().getFullerYear());</script> all rights reserved
+                    <script>document.write(new Data().getFullerYear());
+                    </script>
+                    all rights reserved
                 </div>
 
             </div>
