--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <header class="header" id="header">
         <div class="container">
             <div class="header-container">
-                <a href="#" class="logo"><img src="assets/imgs/logo.png" alt="Le Logo" /></a>
+                <a href="index.html" class="logo"><img src="assets/imgs/logo.png" alt="Le Logo" /></a>
                 <!-- Navigation begin -->
                 <nav class="navigation">
                     <ul class="nav-links">
                         <li class="nav-item">
-                            <a href="#" class="nav-link active">Accueil</a>
+                            <a href="index.html" class="nav-link active">Accueil</a>
                         </li>
                         <li class="nav-item submenu">
                             <!-- Submenu link -->
