Finalisation du site

--- a/newsletter.html
+++ b/newsletter.html
@@ -135,6 +135,7 @@
         <div class="container">
             <div class="blog-wrapper row">
                 <div class="news-left-side px-15">
+                    <!-- Debut left sidebar-->
                     <!--  Partie des category et infos sur l'auteur 1 -->
                     <article class="news-item row">
                         <div class="news-info px-15">
@@ -230,7 +231,9 @@
 
                     </nav>
                     <!-- End Pagination -->
+
                 </div>
+                <!-- Blog right sidebar -->
                 <div class="news-right-side px-15">
                     <aside class="single-sidebar-widget search-widget">
                         <div class="input-group">
@@ -250,15 +253,19 @@
                             <a href="#"><i class="fab fa-twitter"></i></a>
                             <a href="#"><i class="fab fa-whatsapp"></i></a>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates odit mollitia ipsam. Sit
-                            dolor dolores esse minima, id eveniet debitis in minus suscipit iusto sapiente perspiciatis,
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates odit mollitia ipsam.
+                            Sit
+                            dolor dolores esse minima, id eveniet debitis in minus suscipit iusto sapiente
+                            perspiciatis,
                             odio reprehenderit consequuntur blanditiis.</p>
                         <div class="br"></div>
                     </aside>
                     <aside class="single-sidebar-widget newsletter-widget t-center fw-300">
                         <h4 class="widget-title">Newsletter</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur repudiandae, eum quos
-                            voluptatem vel eaque, a non cupiditate, molestiae maiores aliquam quae nobis. Beatae quaerat
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur repudiandae, eum
+                            quos
+                            voluptatem vel eaque, a non cupiditate, molestiae maiores aliquam quae nobis. Beatae
+                            quaerat
                             ipsam necessitatibus id numquam quisquam!</p>
                         <div class="form-group">
                             <div class="input-group">
@@ -291,7 +298,7 @@
                             <li><a href="#">Appel</a></li>
                         </ul>
                     </aside>
-                </div>
+                </div><!-- Fin right sidebar -->
             </div>
         </div>
         </div>>
