--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <!-- End submenu link -->
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Newsletter</a>
+                            <a href="newsletter.html" class="nav-link">Newsletter</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">A propos</a>
