--- a/newsletter.html
+++ b/newsletter.html
@@ -52,10 +52,10 @@
                             <a href="newsletter.html" class="nav-link active">Newsletter</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">A propos</a>
+                            <a href="A_propos.html" class="nav-link">A propos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </nav>
